// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`anonymous AMD module gets a name 1`] = `
"/* Generated by @magento/baler - Mon Sep 16 2019 17:46:16 GMT-0500 (Central Daylight Time) */


            define('main', function() {
                console.log('hello world');
            });
        "
`;

exports[`html file loaded with text plugin gets wrapped as text module 1`] = `
"/* Generated by @magento/baler - Mon Sep 16 2019 17:46:16 GMT-0500 (Central Daylight Time) */

define('text!template.html', function() {
    return '<div>Hello World</div>';
});"
`;

exports[`named AMD module keeps its name 1`] = `
"/* Generated by @magento/baler - Mon Sep 16 2019 17:46:16 GMT-0500 (Central Daylight Time) */


            define('main', function() {
                console.log('hello world');
            });
        "
`;

exports[`non-AMD module with shim gets converted to AMD module 1`] = `
"/* Generated by @magento/baler - Mon Sep 16 2019 17:46:16 GMT-0500 (Central Daylight Time) */

define('main', [\\"jquery\\"], function() {
        // Shimmed by @magento/baler
        (function() {
            
            $(function() {
                // hey look I'm using jQuery outside an AMD wrapper!
            });
        ;
        })();
        return window['undefined'];
    });"
`;

exports[`non-AMD module without shim gets pseudo amd-wrapper for compat 1`] = `
"/* Generated by @magento/baler - Mon Sep 16 2019 17:46:16 GMT-0500 (Central Daylight Time) */

define('main', function() {
    // baler-injected stub for non-AMD module (no shim config was found for this module)
});
// Original code for non-AMD module main

            $(function() {
                // hey look I'm using jQuery outside an AMD wrapper!
            });
        "
`;

exports[`non-html file loaded with text plugin gets wrapped as text module 1`] = `
"/* Generated by @magento/baler - Mon Sep 16 2019 17:46:16 GMT-0500 (Central Daylight Time) */

define('text!js-translation.json', function() {
    return '{\\"hello\\": \\"world\\" }';
});"
`;
